<resources>
    <string name="app_name">Meetings</string>
    <string name="app_name_copy">Meetings</string>
    <string name="app_type"></string>
    <string name="buzz">BUZZ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_credits">Credits</string>

    <!-- Remove unused -->
    <string name="add_token">New Meeting</string>
    <string name="edit_token">Edit Meeting</string>
    <string name="token_marked_complete">Meeting marked complete</string>
    <string name="token_marked_active">Meeting marked In progress</string>
    <string name="token_marked_cancel">Meeting marked cancel</string>
    <string name="loading_tokens_error">Error while loading tokens</string>
    <string name="completed_tokens_cleared">Completed tokens cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_token">Delete token</string>
    <string name="navigation_view_header_title">Tokens</string>
    <string name="title_hint">Title</string>
    <string name="phone_number_hint">Enter customer Phone Number here.</string>
    <string name="counter_number_hint">Enter Counter Number</string>
    <string name="empty_token_message">Token cannot be empty</string>
    <string name="successfully_saved_token_message">Meeting created</string>
    <string name="list_title">Token List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tokens">You have no tokens.</string>
    <string name="statistics_active_tokens">Active tokens:</string>
    <string name="statistics_completed_tokens">Completed tokens:</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tokens_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
        <item>@string/nav_cancelled</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="nav_cancelled">Cancelled</string>
    <string name="label_all">All Meetings</string>
    <string name="label_active">Active Meetings</string>
    <string name="label_completed">Completed Meetings</string>
    <string name="label_cancelled">Cancelled Meetings</string>
    <string name="no_tokens_all">You have no Meetings!</string>
    <string name="no_tokens_active">You have no active Meetings!</string>
    <string name="no_tokens_completed">You have no completed Meetings!</string>
    <string name="no_tokens_cancelled">You have no cancelled Meetings!</string>
    <string name="no_tokens_add">Scedule a Meeting +</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_custom_fields">CustomFields</string>

    <string name="title_activity_idcard">IDCardActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_store_onboarding">StoreOnboarding</string>


    <!-- Store FTU -->
    <string name="config_store">Settings</string>
    <string name="empty_store_name">Empty Store Name</string>
    <string name="empty_store_area">Empty Area Name</string>
    <string name="empty_store_website">Empty Website</string>
    <string name="invalid_store_website">Invalid Website URL</string>
    <string name="empty_store_details">Kindly fill in the store details</string>
    <string name="upload_store_pic">Kindly upload Profile picture.</string>
    <string name="upload_failed_error">File upload failed</string>
    <string name="add_store_failed">Failed to save store details</string>
    <string name="name">Store Name</string>
    <string name="area">Area Name</string>
    <string name="phone_number">Enter Phone Number</string>
    <string name="website">(Optional) Website URL</string>
    <string name="counters">Number of Counters</string>
    <string name="upload">UPLOAD</string>
    <string name="empty_store_counters">Empty Counters</string>
    <string name="invalid_store_counters">Enter between 1 - 100</string>
    <string name="issue_token">Create Meeting</string>
    <string name="failed_fetch_store">Fetching Store details failed. Try again!</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="my_account">My Account</string>
    <string name="issue">ISSUE</string>
    <string name="serve">SERVE</string>
    <string name="powered_by">Powered by</string>
    <string name="website_not_exist">Website does not exist.</string>

    <!--ToDo: find a better way to do this. telugu SMS -->
    <string name="bank_name">మీకు</string>
    <string name="branch_name">మరియు శాఖ</string>
    <string name="received">నుండి టోకెన్ అందింది.</string>
    <string name="token_no">టోకెన్ సంఖ్య</string>
    <string name="counter_no">కౌంటర్</string>
    <string name="playstore_link">నిజ సమయంలో టోకెన్ స్థితిని ట్రాక్ చేయడానికి PlayStore నుండి అప్లికేషన్ డౌన్లోడ్ చేయుము</string>
    <string name="config">Settings</string>
    <string name="reset">Would you like to reset the token counter?</string>
    <string name="reset_button">RESET</string>
    <string name="reset_title">Reset</string>


    <string name="language_preference_key">language_preference_key</string>
    <string name="language_title_preference">Choose Language</string>
    <string name="summary_language_preference">Choose the language in which you would want tokens to be sent to your customers.</string>
    <string name="title_language_preference">Language for Token SMS</string>

    <string-array name="entries_language_preference">
        <item>English</item>
        <item>Telugu</item>
    </string-array>


    <string-array name="entryvalues_language_preference">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="summary_reset_preference">Reset token counter to issue tokens from 1.</string>
    <string name="title_reset_preference">Reset</string>

</resources>
